--- a/1_JAVA_OO/9_projeto/coursemvn/src/main/resources/static/css/sb-admin-3.css
+++ b/1_JAVA_OO/9_projeto/coursemvn/src/main/resources/static/css/sb-admin-3.css
@@ -39,10 +39,9 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --bs-body-font-family: Merriweather, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
-*,card-body
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -61,7 +60,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: --bs-body-font-family;
+  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -7772,7 +7771,7 @@ button.bg-dark:focus {
 
 .mt-5,
 .my-5 {
-  margin-top: 8rem !important;
+  margin-top: 3rem !important;
 }
 
 .mr-5,
@@ -9902,7 +9901,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #0e0e0e 10%, #091246 100%);
+  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
   background-size: cover;
 }
 
@@ -10862,7 +10861,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background-image: url(../assets/img/login.png);
+  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
   background-position: center;
   background-size: cover;
 }
@@ -10892,7 +10891,7 @@ form.user .form-control-user {
 form.user .btn-user {
   font-size: 0.8rem;
   border-radius: 10rem;
-  padding: 1rem 1rem;
+  padding: 0.75rem 1rem;
 }
 
 .btn-google {
